--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
 body {
+  background-color: black;
  	font-family: 'Outfit', sans-serif;
 	font-size: 15px;
 }
 
-#card {
+.wrapper {
 	width: 375px;
+  height: 667px;
 	color: hsl(0, 0%, 100%);
 	background-color: hsl(216, 12%, 8%);
-
-	display: flex;
-  flex-direction: column;
-	align-items: center;
-	justify-content: center;
 
 	margin: 1rem auto;
 }
 
-.how {
-	margin: 1rem auto;
+#card {
+	width: 300px;
+  height: 500px;
+  
+	margin: 12rem 2rem;
+  padding: 12rem auto; 
+
+  background-color: hsl(213, 19%, 18%);
+  border-radius: 10px;
 	/* display: flex;
+  flex-direction: column;
 	align-items: center;
 	justify-content: center; */
 }
 
-.rating {
+#rating {
+  display: flex;
+  padding: 2rem 4rem;
+  display: block;
+}
+
+#result {
+	margin: 1rem auto;
+  display: none;
+}
+
+.how {
+	margin: 1rem auto;
+}
+
+.score {
 	margin: 1rem;
   display: flex;
 	justify-content:space-between;
+  gap: 10px;
+  
 }
 
 .circle {
   background-color: hsl(216, 12%, 54%);
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border-radius: 15px;
   text-align: center;
-  margin: 1rem;  
+
 }
 
