--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
+
+:root {
+  --orange: hsl(25, 97%, 53%);
+  --white: hsl(0, 0%, 100%);
+  --light-grey: hsl(217, 12%, 63%);
+  --medium-grey: hsl(216, 12%, 54%);
+  --dark-blue: hsl(213, 19%, 18%);
+  --very-dark-blue: hsl(216, 12%, 8%);
+}
+
+/* hard reset */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
 body {
   background-color: black;
  	font-family: 'Outfit', sans-serif;
@@ -68,8 +86,23 @@ body {
   background: #3374C2;
 }
 
-
 .submit {
   display: flex;
 	margin: 1rem auto;
+
+  background-color: var(--orange);
+  border: none;
+  padding: 1rem;
+  color: var(--white);
+  border-radius: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  cursor: pointer;
+  transition: all 0.2s;
 }
+
+.submit:hover {
+  background-color: var(--white);
+  color: var(--orange);
+}
+
