--- a/styles.css
+++ b/styles.css
@@ -25,28 +25,27 @@ body {
 }
 
 .wrapper {
+  align-items: center;
+
+	margin: 1rem auto;
+
   display: flex;
   flex-direction: column;
   height: 95vh;
+  justify-content: center;
   max-height: 95vh;
-  justify-content: center;  
-
-	/* width: 375px;
-  height: 667px;
-	color: hsl(0, 0%, 100%);
-	background-color: hsl(216, 12%, 8%);
-
-	margin: 1rem auto; */
 }
 
 #card {
-	width: 300px;
-  height: 500px;
+	/* width: 300px;
+  height: 500px; */
+  width: 375px;
+  height: 667px;
   
 	margin: 2rem 2rem;
   padding: 2rem auto; 
 
-  background-color: hsl(213, 19%, 18%);
+  background-color: var(--dark-blue);
   border-radius: 10px;
 	/* display: flex;
   flex-direction: column;
@@ -63,6 +62,10 @@ body {
 #result {
 	margin: 1rem auto;
   display: none;
+}
+
+.how {
+  color: var(--white);
 }
 
 .desc {
